# shame

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/hot_reload/: Cargo.toml
examples/hot_reload/game/: Cargo.toml
examples/hot_reload/game/src/: app.rs  hello_triangles.rs  hot_reload.rs  main.rs
examples/hot_reload/graphics/: Cargo.toml
examples/hot_reload/graphics/src/: main.rs  serializer.rs
examples/hot_reload/pipeline/: Cargo.toml
examples/hot_reload/pipeline/src/: lib.rs  surface_format.rs
examples/shame_wgpu/src/: conversion.rs
shame/: Cargo.toml
shame/src/backend/: shader_code.rs
shame/src/common/: ignore_eq.rs  po2.rs
shame/src/frontend/any/: blend.rs  render_io.rs  shared_io.rs
shame/src/frontend/encoding/: features.rs  fragment_test.rs  mask.rs  mod.rs  pipeline_info.rs  rasterizer.rs
shame/src/frontend/texture/: texture_formats.rs
shame/src/ir/ir_type/: canon_name.rs  memory_view.rs  struct_.rs  tensor.rs  texture_new.rs  ty.rs
shame/src/ir/pipeline/: shader_stage.rs
shame/src/ir/recording/: call_info.rs  context.rs
