[workspace]
resolver = "2"
members = ["game", "graphics", "pipeline"]

[workspace.dependencies]
shame_wgpu = { path = "../shame_wgpu" }
shame = { path = "../../shame" } # features = ["encode"]? ["serial-ize"]?
wgpu = "25.0.0"

serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.145"

