[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
shame = { workspace = true }
shame_wgpu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true }

# graphics = { path = "../graphics" }
# pipeline_cdylib  = { path = "../pipeline_cdylib/" }
pipeline  = { path = "../pipeline/" }

bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.30.2", features = ["bytemuck", "cuda"] } # "cuda" for 8-byte aligned Vec2
winit = "0.30.9"
pollster = "0.4"
thiserror = "2.0.12"

